--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         #square {
             width: 100px;
             height: 100px;
-            background-color: red;
+            background-color: rgb(0, 0, 0);
             position: absolute;
             top: 100px;
             left: 100px;
